# r5

./: README.md  main.py  pyproject.toml  requirements.txt
models/: predict.py  train.py
notebooks/: r5_part01_sql.ipynb  r5_part02_model.ipynb
